Added border radius to self image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="container">
                 <div class="row swapped">
                     <div class="one-third">
-                        <img src="img/self.jpg" alt="self img" width="918" height="1218">
+                        <img class="self" src="img/self.jpg" alt="self img" width="918" height="1218">
                     </div>
                     <div class="two-thirds">
                         <h1 class="text-centered">E Komo Mai! I&apos;m Tyra.</h1>
