--- a/index.html
+++ b/index.html
@@ -181,53 +181,55 @@
                         <h3>Let&apos;s Collaborate</h3>
                         <p>From stationery items to home goods, I&apos;m all about creating designs that tell a story. Have an
                             idea? Don&apos;t hesitate to reach out!</p>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name">
-                        <label for="name">Email:</label>
-                        <input type="text" id="email" name="user_email">
-                        <label for="bio">Message:</label>
-                        <textarea id="message" name="user_message"></textarea>
+                        <form action="#">
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="user_name">
+                            <label for="name">Email:</label>
+                            <input type="text" id="email" name="user_email"><br>
+                            <label for="bio">Message:</label>
+                            <textarea id="message" name="user_message"></textarea><br>
+                            <a class="btn btn-primary" href="#" role="button">Send</a>
+                        </form>
                     </div>
                     <div class="one-half">
                         <div class="row">
-                            <div class="one-half">
-                                <div class="row">
-                                    <div class="one-third">
-                                        <ul>
-                                            <li>
-                                                <h4>Home</h4>
-                                            </li>
-                                            <li>
-                                                <h4>About</h4><br>
-                                                <p>It's Tyra</p>
-                                            </li>
-                                            <li>
-                                                <h4>Follow Me</h4><br>
-                                                <p><a href="#">Instagram</a></p>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="two-thirds">
-                                        <h4>Projects</h4>
-                                        <ul class="project-list">
-                                            <li>project</li>
-                                            <li>project</li>
-                                            <li>project</li>
-                                            <li>project</li>
-                                            <li>project</li>
-                                            <li>project</li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="col-3">
+                                <ul>
+                                    <li>
+                                        <h4>Home</h4>
+                                    </li>
+                                    <li>
+                                        <h4>About</h4><br>
+                                        <p>It&apos;s&nbsp;Tyra</p>
+                                    </li>
+                                    <li>
+                                        <h4>Follow&nbsp;Me</h4><br>
+                                        <p><a href="#">Instagram</a></p>
+                                    </li>
+                                </ul>
                             </div>
-                            <div class="one-half">
+                            <div class="col-9">
+                                <h4>Projects</h4>
+                                <ul class="project-list">
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                </ul>
+                            </div>
+                            <!-- <div class="row hrline"></div> -->
+                            <!-- <div class="row"></div> -->
+                            <div class="two-thirds centered hrline">
                                 <blockquote>&ldquo; Crafted with intention, shared with joy. &rdquo;<br>&ndash;Hananea
                                     Hawaii</blockquote>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="row">
+            </div>
+            <!-- <div class="row">
                     <div class="one-half">
                         <div class="text-left">
                             <div class="">
