--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <!-- Menu Links -->
-                        <li class="nav-item"><a class="nav-link" href="index.html/#projects">Project</a></li>
+                        <li class="nav-item"><a class="nav-link" href="project.html">Project</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#latest-update">Latest Updates</a></li>
                     </ul>
