--- a/floral arrangement.html
+++ b/floral arrangement.html
@@ -53,7 +53,7 @@
                     <h1 class="text-centered">Floral Arrangement Project</h1>
                     <p class="text-centered">Inspired by the aunties who make floral arrangement to express kindness and
                         gratitude.</p>
-                    <a class="btn btn-primary btn-hero" href="#" role="button">Explore</a>
+                    <a class="btn btn-primary btn-hero" href="#" role="button">Learn More</a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
                     <div class="card">
                         <img src="img/floral_arrangement.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
-                            <h3 class="card-title">Floral Arrangement</h3>
+                            <h3 class="card-title"></h3>
                             <p class="card-text">This illustration drawn on Procreate, was inspired by the aunties who
                                 would create their own floral arrangements.</p>
 
@@ -85,7 +85,7 @@
                     <div class="card">
                         <img src="img/diamond_head_stamp.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
-                            <h3 class="card-title">Diamond Head Stamp</h3>
+                            <h3 class="card-title"></h3>
                             <p class="card-text">This illustration drawn on Procreate, was inspired diamond head. It was
                                 created into a postage stamp.</p>
 
@@ -98,7 +98,7 @@
                     <div class="card">
                         <img src="img/woven_fish.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
-                            <h3 class="card-title">Woven Fish</h3>
+                            <h3 class="card-title"></h3>
                             <p class="card-text">This illustration drawn on Procreate, was inspired by weaving coconut
                                 leaves to create different shapes and animals.</p>
 
@@ -110,69 +110,85 @@
 
             <!-- End of Projects Section -->
 
-    </section>
-    <!-- End of About Me Section -->
-
-    </div>
-
-    <!-- Start of Footer Section -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="one-half">
-                    <h3>Let&apos;s Collaborate</h3>
-                    <p>From stationery items to home goods, I&apos;m all about creating designs that tell a story. Have
-                        an
-                        idea? Don&apos;t hesitate to reach out!</p>
-                    <form action="#">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="user_name">
-                        <label for="name">Email:</label>
-                        <input type="text" id="email" name="user_email"><br>
-                        <label for="bio">Message:</label>
-                        <textarea id="message" name="user_message"></textarea><br>
-                        <a class="btn btn-primary" href="#" role="button">Send</a>
-                    </form>
-                </div>
-                <div class="one-half">
+            <!-- Start of Final Section -->
+            <section id="projects" class="works">
+                <div class="container">
+                    <h2 class="text-centered">Final Visual</h2>
+                    <p class="text-centered">How my drawing turned out.</p>
                     <div class="row">
-                        <div class="col-3">
-                            <ul>
-                                <li>
-                                    <h4>Home</h4>
-                                </li>
-                                <li>
-                                    <h4>About</h4><br>
-                                    <p>It&apos;s&nbsp;Tyra</p>
-                                </li>
-                                <li>
-                                    <h4>Follow&nbsp;Me</h4><br>
-                                    <p><a href="#">Instagram</a></p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-9">
-                            <h4>Projects</h4>
-                            <ul class="project-list">
-                                <li><a href="#">project-title</a></li>
-                                <li><a href="#">project-title</a></li>
-                                <li><a href="#">project-title</a></li>
-                                <li><a href="#">project-title</a></li>
-                                <li><a href="#">project-title</a></li>
-                                <li><a href="#">project-title</a></li>
-                            </ul>
-                        </div>
-                        <!-- <div class="row hrline"></div> -->
-                        <!-- <div class="row"></div> -->
-                        <div class="two-thirds centered hrline">
-                            <blockquote>&ldquo; Crafted with intention, shared with joy. &rdquo;<br>&ndash;Hananea
-                                Hawaii</blockquote>
+                        <!-- Start of Card -->
+                        <div class="two-thirds card-bg">
+                            <div class="card">
+                                <img src="img/floral_arrangement.jpg" alt="placeholder2000x1500" width="2000"
+                                    height="1500">
+                                <div class="card-body">
+                                    <h3 class="card-title"></h3>
+                                    <p class="card-text">This final illustration shows off the green and pink hues that
+                                        can make a floral arrangement look so beautiful.</p>
+            </section>
+            <!-- End of About Me Section -->
+
+        </div>
+
+        <!-- Start of Footer Section -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="one-half">
+                        <h3>Let&apos;s Collaborate</h3>
+                        <p>From stationery items to home goods, I&apos;m all about creating designs that tell a story.
+                            Have
+                            an
+                            idea? Don&apos;t hesitate to reach out!</p>
+                        <form action="#">
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="user_name">
+                            <label for="name">Email:</label>
+                            <input type="text" id="email" name="user_email"><br>
+                            <label for="bio">Message:</label>
+                            <textarea id="message" name="user_message"></textarea><br>
+                            <a class="btn btn-primary" href="#" role="button">Send</a>
+                        </form>
+                    </div>
+                    <div class="one-half">
+                        <div class="row">
+                            <div class="col-3">
+                                <ul>
+                                    <li>
+                                        <h4>Home</h4>
+                                    </li>
+                                    <li>
+                                        <h4>About</h4><br>
+                                        <p>It&apos;s&nbsp;Tyra</p>
+                                    </li>
+                                    <li>
+                                        <h4>Follow&nbsp;Me</h4><br>
+                                        <p><a href="#">Instagram</a></p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-9">
+                                <h4>Projects</h4>
+                                <ul class="project-list">
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                    <li><a href="#">project-title</a></li>
+                                </ul>
+                            </div>
+                            <!-- <div class="row hrline"></div> -->
+                            <!-- <div class="row"></div> -->
+                            <div class="two-thirds centered hrline">
+                                <blockquote>&ldquo; Crafted with intention, shared with joy. &rdquo;<br>&ndash;Hananea
+                                    Hawaii</blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- <div class="row">
+            <!-- <div class="row">
                     <div class="one-half">
                         <div class="text-left">
                             <div class="">
@@ -200,16 +216,16 @@
                         </svg>
                     </div>
                 </div> -->
-        </div>
+            </div>
 
-    </footer>
-    <!-- End of Footer Section -->
+        </footer>
+        <!-- End of Footer Section -->
 
 
-    <!-- REQUIRED: Javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <!-- REQUIRED: Javascript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
