--- a/Floral Arrangement.html
+++ b/Floral Arrangement.html
@@ -66,11 +66,10 @@
                 <!-- Start of Card -->
                 <div class="one-third card-bg">
                     <div class="card">
-                        <img src="img/floral_arrangement.jpg" alt="placeholder2000x1500" width="2000" height="1500">
+                        <img src="img/FL_Progress_1.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
                             <h3 class="card-title"></h3>
-                            <p class="card-text">This illustration drawn on Procreate, was inspired by the aunties who
-                                would create their own floral arrangements.</p>
+                            <p class="card-text">First, I started with sketching out my illustration.</p>
 
                         </div>
                     </div>
