added image and descriptions

--- a/Floral Arrangement.html
+++ b/Floral Arrangement.html
@@ -79,11 +79,10 @@
 
                 <div class="one-third card-bg">
                     <div class="card">
-                        <img src="img/diamond_head_stamp.jpg" alt="placeholder2000x1500" width="2000" height="1500">
+                        <img src="img/FL_Progress_2.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
                             <h3 class="card-title"></h3>
-                            <p class="card-text">This illustration drawn on Procreate, was inspired diamond head. It was
-                                created into a postage stamp.</p>
+                            <p class="card-text">Then, I colored blocked my inital sketch.</p>
 
                         </div>
                     </div>
@@ -92,11 +91,11 @@
                 <!-- Start of Card -->
                 <div class="one-third card-bg">
                     <div class="card">
-                        <img src="img/woven_fish.jpg" alt="placeholder2000x1500" width="2000" height="1500">
+                        <img src="img/FL_Progress_3.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
                             <h3 class="card-title"></h3>
-                            <p class="card-text">This illustration drawn on Procreate, was inspired by weaving coconut
-                                leaves to create different shapes and animals.</p>
+                            <p class="card-text">Finally, I added highlights and shading to add dimension to my
+                                illustration.</p>
 
                         </div>
                     </div>
