added final descriptions

--- a/Floral Arrangement.html
+++ b/Floral Arrangement.html
@@ -82,7 +82,8 @@
                         <img src="img/FL_Progress_2.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
                             <h3 class="card-title"></h3>
-                            <p class="card-text">Then, I colored blocked my inital sketch.</p>
+                            <p class="card-text">Then, I colored blocked my inital sketch to remove any sketch lines.
+                            </p>
 
                         </div>
                     </div>
@@ -95,7 +96,7 @@
                         <div class="card-body">
                             <h3 class="card-title"></h3>
                             <p class="card-text">Finally, I added highlights and shading to add dimension to my
-                                illustration.</p>
+                                illustration. This helped my illustration come to life and look more realistic.</p>
 
                         </div>
                     </div>
