--- a/Diamond Head.html
+++ b/Diamond Head.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floral Arrangement Page</title>
+    <title>Diamond Head Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -47,9 +47,9 @@
             <div class="row">
 
                 <div class="two-thirds centered">
-                    <h1 class="text-centered">Floral Arrangement Project</h1>
-                    <p class="text-centered">Inspired by the aunties who make floral arrangement to express kindness and
-                        gratitude.</p>
+                    <h1 class="text-centered">Diamond Head Project</h1>
+                    <p class="text-centered">Inspired by the scenic Diamond Head. A location that reminds us of O'ahu.
+                    </p>
                     <a class="btn btn-primary btn-hero" href="#" role="button">Learn More</a>
                 </div>
             </div>
