--- a/Diamond Head.html
+++ b/Diamond Head.html
@@ -66,7 +66,7 @@
                 <!-- Start of Card -->
                 <div class="one-third card-bg">
                     <div class="card">
-                        <img src="img/FL_Progress_1.jpg" alt="placeholder2000x1500" width="2000" height="1500">
+                        <img src="img/DH_Progress_1.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
                             <h3 class="card-title"></h3>
                             <p class="card-text">First, I started with sketching out my illustration.</p>
@@ -79,7 +79,7 @@
 
                 <div class="one-third card-bg">
                     <div class="card">
-                        <img src="img/FL_Progress_2.jpg" alt="placeholder2000x1500" width="2000" height="1500">
+                        <img src="img/DH_Progress_2.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
                             <h3 class="card-title"></h3>
                             <p class="card-text">Then, I colored blocked my inital sketch to remove any sketch lines.
@@ -92,7 +92,7 @@
                 <!-- Start of Card -->
                 <div class="one-third card-bg">
                     <div class="card">
-                        <img src="img/FL_Progress_3.jpg" alt="placeholder2000x1500" width="2000" height="1500">
+                        <img src="img/DH_Progress_3.jpg" alt="placeholder2000x1500" width="2000" height="1500">
                         <div class="card-body">
                             <h3 class="card-title"></h3>
                             <p class="card-text">Finally, I added highlights and shading to add dimension to my
@@ -119,8 +119,8 @@
                                     height="1500">
                                 <div class="card-body">
                                     <h3 class="card-title"></h3>
-                                    <p class="card-text">This final illustration shows off the green and pink hues that
-                                        can make a floral arrangement look so beautiful.</p>
+                                    <p class="card-text">This final illustration shows off the different shading,
+                                        dimensions, and values that made this drawing stand out.</p>
             </section>
             <!-- End of About Me Section -->
 
