changed final visual

--- a/Diamond Head.html
+++ b/Diamond Head.html
@@ -96,7 +96,7 @@
                         <div class="card-body">
                             <h3 class="card-title"></h3>
                             <p class="card-text">Finally, I added highlights and shading to add dimension to my
-                                illustration. This helped my illustration come to life and look more realistic.</p>
+                                illustration. </p>
 
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <!-- Start of Card -->
                         <div class="two-thirds card-bg">
                             <div class="card">
-                                <img src="img/floral_arrangement.jpg" alt="placeholder2000x1500" width="2000"
+                                <img src="img/diamond_head_stamp.jpg" alt="placeholder2000x1500" width="2000"
                                     height="1500">
                                 <div class="card-body">
                                     <h3 class="card-title"></h3>
